logger rework