@@ -1,9 +1,10 @@
 package faang.school.projectservice.service.project;
 
-import faang.school.projectservice.dto.client.CreateSubProjectDto;
-import faang.school.projectservice.dto.client.ProjectDto;
-import faang.school.projectservice.dto.client.ProjectFilterDto;
-import faang.school.projectservice.filter.project.ProjectFilter;
+import faang.school.projectservice.config.context.UserContext;
+import faang.school.projectservice.dto.CreateSubProjectDto;
+import faang.school.projectservice.dto.ProjectDto;
+import faang.school.projectservice.dto.ProjectFilterDto;
+import faang.school.projectservice.filter.ProjectFilter;
 import faang.school.projectservice.mapper.project.ProjectMapper;
 import faang.school.projectservice.mapper.project.SubProjectMapper;
 import faang.school.projectservice.model.Moment;
@@ -13,6 +14,7 @@ import faang.school.projectservice.model.ProjectVisibility;
 import faang.school.projectservice.model.TeamMember;
 import faang.school.projectservice.repository.ProjectRepository;
 import faang.school.projectservice.update.ProjectUpdate;
+import faang.school.projectservice.validator.ProjectValidator;
 import faang.school.projectservice.validator.ValidatorForProjectService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -21,7 +23,6 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,6 +32,8 @@ public class ProjectService {
     private final ProjectMapper projectMapper;
     private final List<ProjectUpdate> projectUpdates;
     private final List<ProjectFilter> projectFilters;
+    private final ProjectValidator projectValidator;
+    private final UserContext userContext;
 
     public ProjectDto createSubProject(Long projectId, CreateSubProjectDto createSubProjectDto) {
         Project mainProject = getProject(projectId);
@@ -43,8 +46,8 @@ public class ProjectService {
 
         Project subProject = subProjectMapper.toProject(createSubProjectDto);
         addDependency(mainProject, subProject);
-        saveProject(subProject);
-        saveProject(mainProject);
+        projectRepository.save(subProject);
+        projectRepository.save(mainProject);
 
         return projectMapper.toProjectDto(subProject);
     }
@@ -65,7 +68,7 @@ public class ProjectService {
         }
 
         subProject.setUpdatedAt(LocalDateTime.now());
-        saveProject(subProject);
+        projectRepository.save(subProject);
 
         return projectMapper.toProjectDto(subProject);
     }
@@ -76,11 +79,11 @@ public class ProjectService {
         ValidatorForProjectService.checkProjectContainsChild(project);
         List<Project> projects = project.getChildren().stream()
                 .filter(subProject -> isPrivateProjectInPublic(project, subProject))
-                .collect(Collectors.toList());
+                .toList();
 
         projectFilters.stream()
                 .filter(projectFilter -> projectFilter.isApplicable(projectFilterDto))
-                .forEach(projectFilter -> projectFilter.apply(projects, projectFilterDto));
+                .forEach(projectFilter -> projectFilter.apply(projectFilterDto, projects.stream()));
 
 
         return projects.stream()
@@ -88,8 +91,65 @@ public class ProjectService {
                 .toList();
     }
 
+    public ProjectDto getProjectById(long id) {
+        return projectMapper.toProjectDto(projectRepository.getProjectById(id));
+    }
+
+    public List<ProjectDto> getAllProjects(ProjectFilterDto projectFilterDto) {
+        List<Project> projects = projectRepository.findAll().stream()
+                .filter(project -> isUserMemberOfPrivateProject(project, userContext.getUserId()))
+                .toList();
+
+        return projectFilters.stream()
+                .filter(filter -> filter.isApplicable(projectFilterDto))
+                .reduce(projects.stream(),
+                        (stream, filter) -> filter.apply(projectFilterDto, stream),
+                        (s1, s2) -> s1)
+                .map(projectMapper::toProjectDto)
+                .toList();
+    }
+
+    public ProjectDto createProject(ProjectDto projectDto) {
+        projectValidator.validate(projectDto, this::existsByOwnerUserIdAndName, userContext.getUserId());
+
+        Project project = projectMapper.toProject(projectDto);
+
+        return projectMapper.toProjectDto(projectRepository.create(project));
+    }
+
+    public ProjectDto updateProject(ProjectDto projectDto) {
+        projectValidator.validate(projectDto, this::existsByOwnerUserIdAndName, userContext.getUserId());
+        Project project = projectRepository.getProjectById(projectDto.getId());
+
+        projectMapper.update(projectDto, project);
+        project.setUpdatedAt(LocalDateTime.now());
+
+        return projectMapper.toProjectDto(projectRepository.save(project));
+    }
+
+    public boolean existsByOwnerUserIdAndName(Long userId, String projectName) {
+        return projectRepository.existsByOwnerUserIdAndName(userId, projectName);
+    }
+
+    private boolean isUserMemberOfPrivateProject(Project project, long userId) {
+        if (project.getVisibility().equals(ProjectVisibility.PRIVATE)) {
+            if (project.getTeams() != null) {
+                return project.getTeams().stream()
+                        .filter(Objects::nonNull)
+                        .anyMatch(team -> team.getTeamMembers() != null && team.getTeamMembers().stream()
+                                .filter(Objects::nonNull)
+                                .anyMatch(teamMember -> teamMember.getUserId() == userId));
+            }
+            return false;
+        }
+        return true;
+    }
+
     public Project getProjectEntityById(Long id) {
         return projectRepository.getProjectById(id);
+    }
+    public void saveProject(Project project){
+        projectRepository.save(project);
     }
 
     private boolean checkCancelledStatus(ProjectDto subProjectDto) {
@@ -100,9 +160,7 @@ public class ProjectService {
                 .map(projectRepository::getProjectById)
                 .allMatch(project -> project.getStatus() == ProjectStatus.CANCELLED);
     }
-    public void saveProject(Project project){
-        projectRepository.save(project);
-    }
+
     private void addDependency(Project parent, Project child) {
         if (parent.getChildren() == null) {
             parent.setChildren(new ArrayList<>());
